--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,28 @@
 aiohttp==1.0.5
 astroid==2.0.4
 async-timeout==3.0.1
-asyncio==3.4.3
+certifi==2018.10.15
 chardet==3.0.4
+Click==7.0
 discord.py==0.16.12
+Flask==1.0.2
+idna==2.7
 isort==4.3.4
+itsdangerous==0.24
+Jinja2==2.10
 lazy-object-proxy==1.3.1
+MarkupSafe==1.0
 mccabe==0.6.1
 multidict==4.4.2
+oauthlib==2.1.0
 pylint==2.1.1
+requests==2.19.1
+requests-oauthlib==1.0.0
 six==1.11.0
 SQLAlchemy==1.2.12
 tabulate==0.8.2
+typed-ast==1.1.0
+urllib3==1.23
 websockets==3.4
+Werkzeug==0.14.1
 wrapt==1.10.11
