--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==1.0.5
 astroid==2.0.4
 async-timeout==3.0.1
 certifi==2018.10.15
+cffi==1.11.5
 chardet==3.0.4
 Click==7.0
 discord.py==0.16.12
@@ -16,7 +17,9 @@ MarkupSafe==1.0
 mccabe==0.6.1
 multidict==4.4.2
 oauthlib==2.1.0
+pycparser==2.19
 pylint==2.1.1
+PyNaCl==1.0.1
 requests==2.19.1
 requests-oauthlib==1.0.0
 six==1.11.0
@@ -27,3 +30,4 @@ urllib3==1.23
 websockets==3.4
 Werkzeug==0.14.1
 wrapt==1.10.11
+youtube-dl==2018.10.5
