--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,10 @@ kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
+MonkeyType==18.8.0
 multidict==4.4.2
+mypy==0.641
+mypy-extensions==0.4.1
 nbformat==4.4.0
 numpy==1.15.2
 oauthlib==2.1.0
@@ -37,6 +40,7 @@ pytz==2018.5
 requests==2.19.1
 requests-oauthlib==1.0.0
 retrying==1.3.3
+retype==17.12.0
 six==1.11.0
 SQLAlchemy==1.2.12
 tabulate==0.8.2
